--- a/style.css
+++ b/style.css
@@ -33,3 +33,16 @@ hr {
 .headers {
     text-align: center;
 }
+
+#pup {
+    position:absolute;
+    z-index:200; /* aaaalways on top*/
+    padding: 3px;
+    margin-left: 10px;
+    margin-top: 5px;
+    width: 250px;
+    border: 1px solid black;
+    background-color: #777;
+    color: white;
+    font-size: 0.95em;
+  }
